syntax = "proto3";

option csharp_namespace = "GrpcServiceProjects";
 
package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){}

  	// Server streaming
	rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {}



	// Client streaming
	rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {}

	// Bidirectional streaming
	rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GreetManyTimesRequest {
	Greeting greeting = 1;
}

message GreetManyTimesResponse {
	string result = 1;
}


message Greeting {
	string first_name = 1;
	string last_name = 2;
}



message LongGreetRequest {
	Greeting greeting = 1;
}

message LongGreetResponse {
	string result = 1;
}

message GreetEveryoneRequest {
	Greeting greeting = 1;
}

message GreetEveryoneResponse {
	string result = 1;
}